--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ img {
 }
 /* color scheme */
 :root {
-    --header-bg-color: #222;
+    --header-bg-color: rgb(63, 37, 85);
     --header-txt-color: #aaa;
     --header-highlight-color: white;
 }
