--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,8 @@ img {
 {
     color:var(--header-highlight-color);
     background-color: inherit;
+    margin-left: 80px;
+    margin-right: 80px;
 }
 
 main {
