--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,12 @@
 /* your css here */
+.index .navbar-inverse a.navbar-brand[href="."]
+{
+    margin-left:80px;
+}
+.navbar-inverse .navbar-brand, .navbar-inverse .navbar-nav>li>a 
+{
+    margin-right: 80px;
+}
 h1 {
     text-align: center;
 }
@@ -19,8 +27,6 @@ img {
 {
     color:var(--header-highlight-color);
     background-color: inherit;
-    margin-left: 80px;
-    margin-right: 80px;
 }
 
 main {
@@ -38,5 +44,5 @@ footer {
 
 .navbar-inverse .navbar-brand, .navbar-inverse .navbar-nav>li>a {
     color: inherit;
-    margin-right: 80px;
+
 }
