--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,6 @@
 /* your css here */
+.contact .navbar-inverse .navbar-nav > li > a[href="contact.html"], 
+.about .navbar-inverse .navbar-nav > li > a[href="about.html"],
 .index .navbar-inverse a.navbar-brand[href="."]
 {
     margin-left:80px;
