--- a/css/main.css
+++ b/css/main.css
@@ -19,9 +19,9 @@ img {
 }
 /* color scheme */
 :root {
-    --header-bg-color: #2c2c2c;
+    --header-bg-color: rgb(50, 52, 55);
     --header-txt-color: rgb(255, 255, 255);
-    --header-highlight-color: rgb(239, 243, 19);
+    --header-highlight-color: rgb(227, 184, 56);
 }
 
 .contact .navbar-inverse .navbar-nav > li > a[href="contact.html"], 
